--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
         body {
             font-family: 'Inter', sans-serif;
-            @apply bg-gradient-to-br from-gray-900 via-black to-gray-900 text-gray-300;
+            /* Updated background gradient: orange-700 to black */
+            @apply bg-gradient-to-br from-orange-700 via-black to-black text-gray-300;
             background-size: 200% 200%;
             animation: animateGradient 15s ease infinite;
         }
@@ -36,8 +37,8 @@
             inset: 0;
             border-radius: 0.5rem;
             padding: 2px;
-            background-size: 200% 200%;
-            animation: spinBorder 8s linear infinite;
+            background-size: 300% 300%; /* Increased size for more movement */
+            animation: spinBorder 5s linear infinite; /* Faster animation */
             -webkit-mask:
                 linear-gradient(#fff 0 0) content-box,
                 linear-gradient(#fff 0 0);
@@ -46,15 +47,15 @@
             pointer-events: none;
         }
 
-        /* Updated to orange border */
         .card-gradient-border.orange-border::before {
-            /* Orange gradient: orange-600 (#f97316), orange-700 (#c2410c), dark gray */
-            background-image: linear-gradient(145deg, #f97316, #c2410c, #1f2937);
+            /* Brighter/darker orange gradient fading to black */
+            background-image: linear-gradient(145deg, #f97316, #9a3412, #000000); /* orange-600, orange-800, black */
         }
 
         .card-gradient-border.gray-border::before {
-             background-image: linear-gradient(145deg, #9ca3af, #4b5563, #1f2937);
-             animation-duration: 10s;
+             /* Lighter/darker gray gradient fading to black */
+             background-image: linear-gradient(145deg, #9ca3af, #374151, #000000); /* gray-400, gray-700, black */
+             animation-duration: 6s; /* Faster animation */
         }
 
         #dashboard-content h2 { @apply text-2xl font-semibold text-white mb-6; }
@@ -67,7 +68,6 @@
     <header class="py-4 sticky top-0 z-20 bg-gray-900/80 backdrop-blur-md border-b border-gray-700/50">
         <div class="container mx-auto px-6 flex justify-between items-center">
             <div class="flex items-center space-x-2">
-                {/* Changed icon color to orange */}
                 <svg class="w-8 h-8 text-orange-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4"></path></svg>
                 <span class="text-2xl font-bold text-white">Shillette</span>
             </div>
@@ -79,7 +79,6 @@
                     <a href="#" class="text-gray-300 hover:text-white transition duration-200">Discord</a>
                 </nav>
                 <div id="user-area" class="flex items-center">
-                     {/* Changed login button color to orange */}
                     <button id="login-button" class="bg-orange-600 hover:bg-orange-700 text-white text-sm font-medium py-2 px-4 rounded-lg transition duration-300 flex items-center space-x-2">
                         <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M19.54 6.04a13.27 13.27 0 00-2.66-1.89 12.4 12.4 0 00-1.6-1.3c-.4-.3-.82-.53-1.28-.71-.18-.07-.37-.13-.56-.19a.82.82 0 00-.5-.06 11.85 11.85 0 00-5.88 0 .82.82 0 00-.5.06c-.19.06-.38.12-.56.19-.46.18-.88.4-1.28.7a12.34 12.34 0 00-1.6 1.3A13.23 13.23 0 004.46 6.04 14.31 14.31 0 003 11.7c0 .1 0 .19.02.28a13.8 13.8 0 001.44 4.61c.56 1.1 1.24 2.1 2.04 3 .5.56 1.04 1.07 1.63 1.53.17.13.34.25.52.37a.8.8 0 00.57.19.78.78 0 00.57-.19 11.07 11.07 0 005.56 0 .78.78 0 00.57.19.8.8 0 00.57-.19c.18-.12.35-.24.52-.37a12.06 12.06 0 003.67-4.53 13.85 13.85 0 001.44-4.61c0-.1 0-.19.02-.28a14.31 14.31 0 00-1.46-5.66zm-4.61 7.03a1.93 1.93 0 01-3.86 0 1.93 1.93 0 013.86 0zm-5.72 0a1.93 1.93 0 01-3.86 0 1.93 1.93 0 013.86 0z"></path></svg>
                         <span>Login with Discord</span>
@@ -104,13 +103,11 @@
             <div class="hero-bg-element"></div>
             <div class="container mx-auto px-6 relative z-10">
                 <h1 class="text-4xl md:text-5xl lg:text-6xl font-extrabold text-white mb-4">Shillette</h1>
-                 {/* Changed subtitle color to orange */}
                 <p class="text-xl md:text-2xl text-orange-400 mb-6 font-medium">Advanced DMA Firmware</p>
                 <p class="max-w-2xl mx-auto text-gray-400 mb-10">
                     Fully undetected DMA firmware, battle-tested for reliable performance. Join thousands of satisfied users.
                 </p>
                 <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4 mb-16">
-                    {/* Changed purchase button color to orange */}
                     <button class="bg-orange-600 hover:bg-orange-700 text-white font-semibold py-3 px-8 rounded-lg transition duration-300 shadow-lg w-full sm:w-auto">
                         Purchase Product
                     </button>
@@ -144,10 +141,8 @@
             <div class="container mx-auto px-6">
                 <h2 class="text-3xl md:text-4xl font-bold text-white text-center mb-12">Our Products</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-5xl mx-auto">
-                    {/* Changed to orange-border class */}
                     <div class="relative bg-slate-800 rounded-lg p-6 shadow-xl flex flex-col card-gradient-border orange-border">
                         <div class="flex justify-between items-center mb-4">
-                             {/* Changed tag color to orange */}
                             <span class="bg-orange-500/20 text-orange-300 text-xs font-semibold px-2.5 py-0.5 rounded">ALL IN ONE</span>
                             <div class="flex space-x-2 text-yellow-400">
                                 <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
@@ -162,7 +157,6 @@
                             <li class="flex items-center"><svg class="w-4 h-4 mr-2 text-green-500" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg> Full Support</li>
                             <li class="flex items-center"><svg class="w-4 h-4 mr-2 text-green-500" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path></svg> Lifetime Updates</li>
                         </ul>
-                         {/* Changed button color to orange */}
                         <button class="mt-auto w-full bg-orange-600 hover:bg-orange-700 text-white font-medium py-2.5 px-6 rounded-lg transition duration-300">
                             View Product
                         </button>
@@ -197,7 +191,6 @@
             <div class="dashboard-card md:col-span-1">
                 <h3 class="text-lg font-semibold text-white mb-4">Welcome!</h3>
                 <div class="flex items-center space-x-4 mb-4">
-                     {/* Changed dashboard avatar border to orange */}
                      <img id="dashboard-user-avatar" src="https://placehold.co/64x64/7f8c8d/ecf0f1?text=?" alt="User Avatar" class="w-16 h-16 rounded-full border-2 border-orange-500">
                      <div>
                          <p id="dashboard-user-name" class="text-xl font-semibold text-white">Username</p>
@@ -241,7 +234,7 @@
 
         const simulatedUserData = {
             username: 'DiscordUser#1234',
-            avatarUrl: 'https://placehold.co/64x64/f39c12/ffffff?text=D' // Updated placeholder avatar color
+            avatarUrl: 'https://placehold.co/64x64/f39c12/ffffff?text=D'
         };
 
         const discordAuthUrl = 'https://discord.com/oauth2/authorize?client_id=1363309221659021512&response_type=code&redirect_uri=http%3A%2F%2Flocalhost%3A53134%2Fauth%2Fdiscord&scope=identify';
