--- a/index.html
+++ b/index.html
@@ -21,15 +21,42 @@
             100% { background-position: 0% 50%; }
         }
 
+        @keyframes fall {
+            0% { transform: translateY(-10vh) translateX(0); opacity: 1; }
+            100% { transform: translateY(110vh) translateX(5vw); opacity: 0; } /* Added slight horizontal drift */
+        }
+
         body {
             font-family: 'Inter', sans-serif;
-            /* Updated background gradient: orange-700 to black */
             @apply bg-gradient-to-br from-orange-700 via-black to-black text-gray-300;
             background-size: 200% 200%;
             animation: animateGradient 15s ease infinite;
+            overflow-x: hidden; /* Prevent horizontal scrollbar from snow */
         }
 
         .hero-bg-element { }
+
+        #snow-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none; /* Allow clicks through */
+            z-index: 40; /* Below header (z-20) but above background */
+            overflow: hidden;
+        }
+
+        .snowflake {
+            position: absolute;
+            background-color: white;
+            border-radius: 50%;
+            pointer-events: none;
+            animation-name: fall;
+            animation-timing-function: linear;
+            animation-iteration-count: infinite;
+        }
+
 
         .card-gradient-border::before {
             content: '';
@@ -37,8 +64,8 @@
             inset: 0;
             border-radius: 0.5rem;
             padding: 2px;
-            background-size: 300% 300%; /* Increased size for more movement */
-            animation: spinBorder 5s linear infinite; /* Faster animation */
+            background-size: 300% 300%;
+            animation: spinBorder 5s linear infinite;
             -webkit-mask:
                 linear-gradient(#fff 0 0) content-box,
                 linear-gradient(#fff 0 0);
@@ -48,14 +75,12 @@
         }
 
         .card-gradient-border.orange-border::before {
-            /* Brighter/darker orange gradient fading to black */
-            background-image: linear-gradient(145deg, #f97316, #9a3412, #000000); /* orange-600, orange-800, black */
+            background-image: linear-gradient(145deg, #f97316, #9a3412, #000000);
         }
 
         .card-gradient-border.gray-border::before {
-             /* Lighter/darker gray gradient fading to black */
-             background-image: linear-gradient(145deg, #9ca3af, #374151, #000000); /* gray-400, gray-700, black */
-             animation-duration: 6s; /* Faster animation */
+             background-image: linear-gradient(145deg, #9ca3af, #374151, #000000);
+             animation-duration: 6s;
         }
 
         #dashboard-content h2 { @apply text-2xl font-semibold text-white mb-6; }
@@ -64,6 +89,8 @@
     </style>
 </head>
 <body class="min-h-screen flex flex-col">
+
+    <div id="snow-container"></div>
 
     <header class="py-4 sticky top-0 z-20 bg-gray-900/80 backdrop-blur-md border-b border-gray-700/50">
         <div class="container mx-auto px-6 flex justify-between items-center">
@@ -231,6 +258,7 @@
         const userAvatarDisplay = document.getElementById('user-avatar');
         const dashboardUserNameDisplay = document.getElementById('dashboard-user-name');
         const dashboardUserAvatarDisplay = document.getElementById('dashboard-user-avatar');
+        const snowContainer = document.getElementById('snow-container'); // Get snow container
 
         const simulatedUserData = {
             username: 'DiscordUser#1234',
@@ -264,6 +292,32 @@
             localStorage.removeItem('isLoggedIn');
         }
 
+        function createSnowflakes() {
+            const numberOfSnowflakes = 75; // Keep it minimal
+            if (!snowContainer) return;
+
+            for (let i = 0; i < numberOfSnowflakes; i++) {
+                const snowflake = document.createElement('div');
+                snowflake.classList.add('snowflake');
+
+                const size = Math.random() * 3 + 2; // Size between 2px and 5px
+                const duration = Math.random() * 10 + 5; // Duration between 5s and 15s
+                const delay = Math.random() * 10; // Delay up to 10s
+                const startLeft = Math.random() * 100; // Start anywhere horizontally
+                const opacity = Math.random() * 0.5 + 0.5; // Opacity between 0.5 and 1.0
+
+                snowflake.style.width = `${size}px`;
+                snowflake.style.height = `${size}px`;
+                snowflake.style.left = `${startLeft}vw`;
+                snowflake.style.opacity = opacity;
+                snowflake.style.animationDuration = `${duration}s`;
+                snowflake.style.animationDelay = `-${delay}s`; // Negative delay starts partway through
+
+                snowContainer.appendChild(snowflake);
+            }
+        }
+
+
         loginButton.addEventListener('click', () => {
             console.log('Redirecting to Discord for authorization...');
             window.location.href = discordAuthUrl;
@@ -279,11 +333,17 @@
              showMainContent();
         });
 
-        if (localStorage.getItem('isLoggedIn') === 'true') {
-            showDashboard();
-        } else {
-            showMainContent();
-        }
+        // Run on page load
+        document.addEventListener('DOMContentLoaded', () => {
+            createSnowflakes(); // Create the snow effect
+
+            if (localStorage.getItem('isLoggedIn') === 'true') {
+                showDashboard();
+            } else {
+                showMainContent();
+            }
+        });
+
 
     </script>
 
