--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         @keyframes fall {
             0% { transform: translateY(-10vh) translateX(0); opacity: 1; }
-            100% { transform: translateY(110vh) translateX(5vw); opacity: 0; } /* Added slight horizontal drift */
+            100% { transform: translateY(110vh) translateX(5vw); opacity: 0; }
         }
 
         body {
@@ -31,7 +31,7 @@
             @apply bg-gradient-to-br from-orange-700 via-black to-black text-gray-300;
             background-size: 200% 200%;
             animation: animateGradient 15s ease infinite;
-            overflow-x: hidden; /* Prevent horizontal scrollbar from snow */
+            overflow-x: hidden;
         }
 
         .hero-bg-element { }
@@ -42,8 +42,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            pointer-events: none; /* Allow clicks through */
-            z-index: 40; /* Below header (z-20) but above background */
+            pointer-events: none;
+            z-index: 40;
             overflow: hidden;
         }
 
@@ -258,14 +258,15 @@
         const userAvatarDisplay = document.getElementById('user-avatar');
         const dashboardUserNameDisplay = document.getElementById('dashboard-user-name');
         const dashboardUserAvatarDisplay = document.getElementById('dashboard-user-avatar');
-        const snowContainer = document.getElementById('snow-container'); // Get snow container
+        const snowContainer = document.getElementById('snow-container');
 
         const simulatedUserData = {
             username: 'DiscordUser#1234',
             avatarUrl: 'https://placehold.co/64x64/f39c12/ffffff?text=D'
         };
 
-        const discordAuthUrl = 'https://discord.com/oauth2/authorize?client_id=1363309221659021512&response_type=code&redirect_uri=http%3A%2F%2Flocalhost%3A53134%2Fauth%2Fdiscord&scope=identify';
+        // Updated Discord Auth URL with new redirect_uri port
+        const discordAuthUrl = 'https://discord.com/oauth2/authorize?client_id=1363309221659021512&response_type=code&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2Fauth%2Fdiscord&scope=identify';
 
         function showDashboard() {
             mainContent.classList.add('hidden');
@@ -293,25 +294,25 @@
         }
 
         function createSnowflakes() {
-            const numberOfSnowflakes = 75; // Keep it minimal
+            const numberOfSnowflakes = 75;
             if (!snowContainer) return;
 
             for (let i = 0; i < numberOfSnowflakes; i++) {
                 const snowflake = document.createElement('div');
                 snowflake.classList.add('snowflake');
 
-                const size = Math.random() * 3 + 2; // Size between 2px and 5px
-                const duration = Math.random() * 10 + 5; // Duration between 5s and 15s
-                const delay = Math.random() * 10; // Delay up to 10s
-                const startLeft = Math.random() * 100; // Start anywhere horizontally
-                const opacity = Math.random() * 0.5 + 0.5; // Opacity between 0.5 and 1.0
+                const size = Math.random() * 3 + 2;
+                const duration = Math.random() * 10 + 5;
+                const delay = Math.random() * 10;
+                const startLeft = Math.random() * 100;
+                const opacity = Math.random() * 0.5 + 0.5;
 
                 snowflake.style.width = `${size}px`;
                 snowflake.style.height = `${size}px`;
                 snowflake.style.left = `${startLeft}vw`;
                 snowflake.style.opacity = opacity;
                 snowflake.style.animationDuration = `${duration}s`;
-                snowflake.style.animationDelay = `-${delay}s`; // Negative delay starts partway through
+                snowflake.style.animationDelay = `-${delay}s`;
 
                 snowContainer.appendChild(snowflake);
             }
@@ -333,9 +334,8 @@
              showMainContent();
         });
 
-        // Run on page load
         document.addEventListener('DOMContentLoaded', () => {
-            createSnowflakes(); // Create the snow effect
+            createSnowflakes();
 
             if (localStorage.getItem('isLoggedIn') === 'true') {
                 showDashboard();
@@ -343,7 +343,6 @@
                 showMainContent();
             }
         });
-
 
     </script>
 
