--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
                         <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M19.54 6.04a13.27 13.27 0 00-2.66-1.89 12.4 12.4 0 00-1.6-1.3c-.4-.3-.82-.53-1.28-.71-.18-.07-.37-.13-.56-.19a.82.82 0 00-.5-.06 11.85 11.85 0 00-5.88 0 .82.82 0 00-.5.06c-.19.06-.38.12-.56.19-.46.18-.88.4-1.28.7a12.34 12.34 0 00-1.6 1.3A13.23 13.23 0 004.46 6.04 14.31 14.31 0 003 11.7c0 .1 0 .19.02.28a13.8 13.8 0 001.44 4.61c.56 1.1 1.24 2.1 2.04 3 .5.56 1.04 1.07 1.63 1.53.17.13.34.25.52.37a.8.8 0 00.57.19.78.78 0 00.57-.19 11.07 11.07 0 005.56 0 .78.78 0 00.57.19.8.8 0 00.57-.19c.18-.12.35-.24.52-.37a12.06 12.06 0 003.67-4.53 13.85 13.85 0 001.44-4.61c0-.1 0-.19.02-.28a14.31 14.31 0 00-1.46-5.66zm-4.61 7.03a1.93 1.93 0 01-3.86 0 1.93 1.93 0 013.86 0zm-5.72 0a1.93 1.93 0 01-3.86 0 1.93 1.93 0 013.86 0z"></path></svg>
                         <span>Login with Discord</span>
                     </button>
-                    <div id="user-info" class="hidden items-center space-x-3">
+                    <div id="user-info" class="hidden items-center space-x-3 hover:bg-slate-700/50 p-1.5 rounded-lg transition duration-200 cursor-default">
                         <img id="user-avatar" src="https://placehold.co/32x32/7f8c8d/ecf0f1?text=?" alt="User Avatar" class="w-8 h-8 rounded-full border-2 border-slate-600">
                         <span id="user-name" class="text-white text-sm font-medium">Username</span>
-                        <button id="logout-button" class="text-gray-400 hover:text-white text-sm underline">Logout</button>
+                        <button id="logout-button" class="text-gray-400 hover:text-white text-xs font-medium bg-slate-600 hover:bg-slate-500 px-2 py-1 rounded-md transition duration-200">Logout</button>
                     </div>
                 </div>
             </div>
@@ -261,11 +261,11 @@
         const snowContainer = document.getElementById('snow-container');
 
         const simulatedUserData = {
-            username: 'DiscordUser#1234',
-            avatarUrl: 'https://placehold.co/64x64/f39c12/ffffff?text=D'
+            username: 'TestUser#0001', // Using a test username
+            avatarUrl: 'https://placehold.co/64x64/f39c12/ffffff?text=T' // Test avatar
         };
 
-        // Updated Discord Auth URL with new redirect_uri port
+        // Keep the Discord Auth URL in case it's needed later, but don't use it for login click
         const discordAuthUrl = 'https://discord.com/oauth2/authorize?client_id=1363309221659021512&response_type=code&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2Fauth%2Fdiscord&scope=identify';
 
         function showDashboard() {
@@ -296,7 +296,8 @@
         function createSnowflakes() {
             const numberOfSnowflakes = 75;
             if (!snowContainer) return;
-
+            // Clear existing snowflakes if any (e.g., on logout/login cycle)
+            snowContainer.innerHTML = '';
             for (let i = 0; i < numberOfSnowflakes; i++) {
                 const snowflake = document.createElement('div');
                 snowflake.classList.add('snowflake');
@@ -318,10 +319,10 @@
             }
         }
 
-
+        // Use simulation: clicking login shows dashboard directly
         loginButton.addEventListener('click', () => {
-            console.log('Redirecting to Discord for authorization...');
-            window.location.href = discordAuthUrl;
+            console.log('Simulating Login...');
+            showDashboard();
         });
 
         logoutButton.addEventListener('click', () => {
