--- a/index.html
+++ b/index.html
@@ -261,11 +261,10 @@
         const snowContainer = document.getElementById('snow-container');
 
         const simulatedUserData = {
-            username: 'TestUser#0001', // Using a test username
-            avatarUrl: 'https://placehold.co/64x64/f39c12/ffffff?text=T' // Test avatar
+            username: 'TestUser#0001',
+            avatarUrl: 'https://placehold.co/64x64/f39c12/ffffff?text=T'
         };
 
-        // Keep the Discord Auth URL in case it's needed later, but don't use it for login click
         const discordAuthUrl = 'https://discord.com/oauth2/authorize?client_id=1363309221659021512&response_type=code&redirect_uri=http%3A%2F%2Flocalhost%3A8080%2Fauth%2Fdiscord&scope=identify';
 
         function showDashboard() {
@@ -296,7 +295,6 @@
         function createSnowflakes() {
             const numberOfSnowflakes = 75;
             if (!snowContainer) return;
-            // Clear existing snowflakes if any (e.g., on logout/login cycle)
             snowContainer.innerHTML = '';
             for (let i = 0; i < numberOfSnowflakes; i++) {
                 const snowflake = document.createElement('div');
@@ -319,7 +317,6 @@
             }
         }
 
-        // Use simulation: clicking login shows dashboard directly
         loginButton.addEventListener('click', () => {
             console.log('Simulating Login...');
             showDashboard();
