--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
             </div>
             <div class="flex items-center space-x-6">
                 <nav class="hidden md:flex space-x-6">
-                    <a href="#" class="text-gray-300 hover:text-white transition duration-200">Home</a>
+                    {/* Added id="home-link" */}
+                    <a href="#" id="home-link" class="text-gray-300 hover:text-white transition duration-200">Home</a>
                     <a href="#products" class="text-gray-300 hover:text-white transition duration-200">Products</a>
                     <a href="#" class="text-gray-300 hover:text-white transition duration-200">Pricing</a>
                     <a href="#" class="text-gray-300 hover:text-white transition duration-200">Discord</a>
@@ -259,6 +260,7 @@
         const dashboardUserNameDisplay = document.getElementById('dashboard-user-name');
         const dashboardUserAvatarDisplay = document.getElementById('dashboard-user-avatar');
         const snowContainer = document.getElementById('snow-container');
+        const homeLink = document.getElementById('home-link'); // Get home link
 
         const simulatedUserData = {
             username: 'TestUser#0001',
@@ -331,6 +333,15 @@
              console.log('Simulating Logout from Dashboard...');
              showMainContent();
         });
+
+        // Add event listener for home link
+        if(homeLink) {
+            homeLink.addEventListener('click', (event) => {
+                event.preventDefault(); // Prevent default '#' anchor behavior
+                console.log('Home link clicked, showing main content...');
+                showMainContent();
+            });
+        }
 
         document.addEventListener('DOMContentLoaded', () => {
             createSnowflakes();
