--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <a href="#" id="home-link" class="text-gray-300 hover:text-white transition duration-200">Home</a>
                     <a href="#products" class="text-gray-300 hover:text-white transition duration-200">Products</a>
                     <a href="#" class="text-gray-300 hover:text-white transition duration-200">Pricing</a>
-                    <a href="#" class="text-gray-300 hover:text-white transition duration-200">Discord</a>
+                    <a href="https://discord.gg/shillette" class="text-gray-300 hover:text-white transition duration-200">Discord</a>
                 </nav>
                 <div id="user-area" class="flex items-center">
                     <button id="login-button" class="bg-orange-600 hover:bg-orange-700 text-white text-sm font-medium py-2 px-4 rounded-lg transition duration-300 flex items-center space-x-2">
