--- a/index.html
+++ b/index.html
@@ -123,7 +123,6 @@
                 <nav class="hidden md:flex space-x-6">
                     <a href="#" id="home-link" class="text-gray-300 hover:text-white transition duration-200">Home</a>
                     <a href="#" id="products-link" class="text-gray-300 hover:text-white transition duration-200">Products</a>
-                    <a href="#" class="text-gray-300 hover:text-white transition duration-200">Pricing</a>
                     <a href="https://discord.gg/shillette" target="_blank" rel="noopener noreferrer" class="text-gray-300 hover:text-white transition duration-200">Discord</a>
                 </nav>
                 <div id="user-area" class="flex items-center">
@@ -156,7 +155,7 @@
                     Fully undetected DMA firmware, battle-tested for reliable performance. Join thousands of satisfied users.
                 </p>
                 <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4 mb-16">
-                    <button class="bg-orange-600 hover:bg-orange-700 text-white font-semibold py-3 px-8 rounded-lg transition duration-300 shadow-lg w-full sm:w-auto">
+                    <button id="purchase-button" class="bg-orange-600 hover:bg-orange-700 text-white font-semibold py-3 px-8 rounded-lg transition duration-300 shadow-lg w-full sm:w-auto">
                         Purchase Product
                     </button>
                     <a href="https://discord.gg/shillette" target="_blank" rel="noopener noreferrer" class="bg-gray-700 hover:bg-gray-600 text-white font-semibold py-3 px-8 rounded-lg transition duration-300 shadow-lg w-full sm:w-auto flex items-center justify-center space-x-2">
@@ -291,6 +290,7 @@
         const productsLink = document.getElementById('products-link');
         const backToHomeButton = document.getElementById('back-to-home-button');
         const paymentMessage = document.getElementById('payment-message');
+        const purchaseButton = document.getElementById('purchase-button');
 
         const simulatedUserData = {
             username: 'TestUser#0001',
@@ -430,12 +430,19 @@
 
         if(userInfo) {
              userInfo.addEventListener('click', (event) => {
-                 // Prevent logout button click from triggering dashboard navigation
                  if (!event.target.closest('#logout-button')) {
                      console.log('User info panel clicked, showing dashboard...');
                      showDashboard();
                  }
              });
+        }
+
+        if(purchaseButton) {
+            purchaseButton.addEventListener('click', (event) => {
+                event.preventDefault();
+                console.log('Purchase button clicked, showing products page...');
+                showProductsPage();
+            });
         }
 
         document.addEventListener('click', (event) => {
